k8s/services/user-service/overlays/dev/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user-ingressroute
  labels:
    app: user
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dev.viscord.app`) && (PathPrefix(`/api/users`) || PathPrefix(`/api/user-profiles`) || PathPrefix(`/api/relationships`)) && !PathPrefix(`/api/users/me/channels`)
      services:
        - name: user-service
          port: 3000
      middlewares:
        - name: strip-api-prefix
        - name: forward-auth
